[package]
name = "chronos-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared types for Chronos-Graph: identifiers, time, bitemporal span, errors."

[dependencies]
