[package]
name = "chronos-embedded"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Embedded library form factor (single-node / edge agent memory) sharing the same engine kernel. Assembles storage + temporal into a transactional FactStore."

[dependencies]
chronos-common.workspace = true
chronos-storage.workspace = true
chronos-temporal.workspace = true
chronos-query.workspace = true
chronos-graph-model.workspace = true
chronos-provenance.workspace = true
chronos-community.workspace = true
chronos-resolution.workspace = true
chronos-index.workspace = true

[dev-dependencies]
proptest = "1"
