[package]
name = "chronos-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Built-in MCP server exposing agent tools (write-memory / search / multi-hop) so server-side multi-hop reduces agentic round-trips."

[dependencies]
chronos-common.workspace = true
chronos-query.workspace = true
chronos-graph-model.workspace = true
