[package]
name = "chronos-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Built-in MCP server (JSON-RPC over stdio) exposing agent tools: add_memory / search_memory, with server-side retrieval."

[[bin]]
name = "chronos-mcp"
path = "src/main.rs"

[dependencies]
chronos-common.workspace = true
chronos-embedded.workspace = true
chronos-temporal.workspace = true
serde_json = "1"
