[package]
name = "chronos-provenance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Provenance subsystem: triple<->chunk<->document links and source-invalidation cascade."

[dependencies]
chronos-common.workspace = true
