[package]
name = "chronos-resolution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "[Phase 2] Embedding-based entity resolution / canonicalization, with consistent merge of history and provenance."

[dependencies]
chronos-common.workspace = true
chronos-graph-model.workspace = true
