[package]
name = "chronos-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Storage engine: bitemporal record codec, MVCC, transactions, and the interval index. In-memory backend by default; RocksDB backend behind the `rocks` feature."

[features]
default = []
# Enables the durable RocksDB-backed StorageEngine. Builds RocksDB from source
# (heavy); compression libs are disabled to keep the native build lean.
rocks = ["dep:rocksdb"]

[dependencies]
chronos-common.workspace = true
rocksdb = { version = "0.22", optional = true, default-features = false }
