[package]
name = "chronos-temporal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Bitemporal core: fact validity, contradiction-driven invalidation, and as-of evaluation."

[dependencies]
chronos-common.workspace = true
